# imac2-conic-fitting

./: .gitignore  CMakeLists.txt  README.md
lib/: random.cpp
src/conic_fitting/: conic.cpp  conic.hpp  main.cpp
src/fractale/: main.cpp
src/kmeans/: main.cpp
src/rosace/: main.cpp
